manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hawkerflow
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-hawker
  namespace: hawkerflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-hawker
  template:
    metadata:
      labels:
        app: service-hawker
    spec:
      containers:
        - name: service-hawker
          image: 000000000000.dkr.ecr.us-east-1.localhost.localstack.cloud:4566/hawker-flow:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /usr/local/app/resources
            - name: vault-secrets
              mountPath: /usr/local/app/vault
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: hawkerflow-config
        - name: vault-secrets
          secret:
            secretName: hawkerflow-db-secret
---
apiVersion: v1
kind: Service
metadata:
  name: service-hawker
  namespace: hawkerflow
spec:
  type: NodePort
  selector:
    app: service-hawker
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hawkerflow-ingress
  namespace: hawkerflow
  annotations:
    # --- For AWS ALB Ingress Controller (AWS EKS & LocalStack) ---
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /hawker/docs
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  # Use 'alb' for AWS ALB Controller, or remove/change to 'traefik'/'nginx' if using local k3d ingress
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hawker
            pathType: Prefix
            backend:
              service:
                name: service-hawker
                port:
                  number: 80
